--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,11 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td>
+              <form method="POST" action="/urls/9sm5xK/delete">
+                <button>Delete</button>
+            </form>
+          </td>
           </tr>
         <% } %>
       </tbody>
