--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,6 +26,11 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
+              <form method="GET" action="/urls/9sm5xK">
+                <button>Edit</button>
+            </form>
+            </td>
+            <td>
               <form method="POST" action="/urls/9sm5xK/delete">
                 <button>Delete</button>
             </form>
