--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,6 +16,12 @@
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
     <div class="card-footer text-muted"></div>
+    <h5>Edit</h5>
+    <form method="POST" action="/express_server">
+      <input type='text' name='update' placeholder="updated longURL" style="margin: 1em"/>
+      <button>Update</button>
+    </form>
+  <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
