--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -26,12 +26,12 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td>
-              <form method="GET" action="/urls/9sm5xK">
+              <form method="GET" action="/urls/<%= url %>">
                 <button>Edit</button>
             </form>
             </td>
             <td>
-              <form method="POST" action="/urls/9sm5xK/delete">
+              <form method="POST" action="/urls/<%= url %>/delete">
                 <button>Delete</button>
             </form>
           </td>
