--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,11 +13,13 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <!-- <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p> -->
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+
       </div>
     <div class="card-footer text-muted"></div>
     <h5>Edit</h5>
-    <form method="POST" action="/express_server">
+    <form method="POST" action="/urls/<%= shortURL %>">
       <input type='text' name='update' placeholder="updated longURL" style="margin: 1em"/>
       <button>Update</button>
     </form>
