--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,9 +10,13 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
 
+      
+      
 
-    <% if(username){ %>
-      <p>Logged in as: <%= username %>! </p>
+      <% if(user) { %>
+        <p>Logged in as: <%= user.email %>! </p>
+        
+
       <form method="POST" action="/logout">
         <button>Logout</button>
       </form>
@@ -21,11 +25,14 @@
 
       <div>
       <form method="POST" action="/login">
-        <input type='text' name='username' placeholder='Username' style="margin: 1em"/>
+        <input type='text' name='email' placeholder='Email' style="margin: 1em"/>
+        <input type='text' name='password' placeholder='Password' style="margin: 1em"/>
         <button>Submit</button>
       </form>
       </div>
         <% } %>
+
+
 
 
     </div>
