--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-  <%- include('partials/_header.js') %>
+  <%- include('partials/_header.ejs') %>
     
   <div class="card text-center">
       <div class="card-header"></div>
