removed login from header, replaced with registration and login buttons leading to new pages, reworked routes. Still need to fix logout button

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,10 +10,21 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
 
-      
-      
+      <p><a href="/register">Registration</a></p>
 
-      <% if(user) { %>
+
+      <% if (user) { %>
+        <form method="POST" action="/logout">
+          <button>Logout</button>
+        </form>
+        <% } else { %>
+          <p><a href="/login">Login</a></p>
+      <% } %>
+
+
+      
+<!-- REMOVE LOGIN FORM FROM HEADER -->
+      <!-- <% if(user) { %>
         <p>Logged in as: <%= user.email %>! </p>
         
 
@@ -30,8 +41,8 @@
         <button>Submit</button>
       </form>
       </div>
-        <% } %>
-
+        <% } %> -->
+<!-- ---------------------------------- -->
 
 
 
