--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -10,14 +10,15 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
 
-      <p><a href="/register">Registration</a></p>
-
-
+      
+      
       <% if (user) { %>
+        <p>Logged in as: <%= user.email %>! </p>
         <form method="POST" action="/logout">
           <button>Logout</button>
         </form>
         <% } else { %>
+          <p><a href="/register">Registration</a></p>
           <p><a href="/login">Login</a></p>
       <% } %>
 
