--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -12,12 +12,14 @@
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h1>Register</h1>
+        <h1>Create Account</h1>
       </div>
     <div class="card-footer text-muted"></div>
 
     <form method="POST" action="/register">
+      <label for="email">Email:</label>
       <input type='email' name='email' placeholder='email' style="margin: 1em"/>
+      <label for="password">Password:</label>
       <input type='password' name='password' placeholder='password' style="margin: 1em"/>
       <button>Register</button>
     </form>
