--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,12 +27,12 @@
             <td><%= urls[url].longURL %></td>
             <td>
               <form method="GET" action="/urls/<%= url %>">
-                <button>Edit</button>
+                <button class="btn btn-outline-success">Edit</button>
             </form>
             </td>
             <td>
               <form method="POST" action="/urls/<%= url %>/delete">
-                <button>Delete</button>
+                <button class="btn btn-outline-danger">Delete</button>
             </form>
           </td>
           </tr>
