--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -21,7 +21,7 @@
         <input type='email' name='email' placeholder='Email' style="margin: 1em"/>
         <label for="password">Password:</label>
         <input type='password' name='password' placeholder='Password' style="margin: 1em"/>
-        <button>Submit</button>
+        <button class="btn btn-primary">Login</button>
       </form>
     </div>
     <div class="card-footer text-muted"></div>
