--- a/views/urls_registration.ejs
+++ b/views/urls_registration.ejs
@@ -21,7 +21,7 @@
       <input type='email' name='email' placeholder='email' style="margin: 1em"/>
       <label for="password">Password:</label>
       <input type='password' name='password' placeholder='password' style="margin: 1em"/>
-      <button>Register</button>
+      <button class="btn btn-primary">Register</button>
     </form>
 
   <div class="card-footer text-muted"></div>
