last commit before encryption work

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,8 +17,8 @@
               <button class="btn btn-danger">Logout</button>
             </form>
           <% } else { %>
-            <p><a class="nav-item nav-link" href="/register">Registration</a></p>
-            <p><a class="nav-item nav-link" href="/login">Login</a></p>
+            <p style="margin-left: 50%; margin-right: 10px; margin-top: 10px;"><a class="nav-item nav-link" href="/register">Registration</a></p>
+            <p style="margin-top: 10px;"><a class="nav-item nav-link" href="/login">Login</a></p>
             <% } %>
           </div>
 
