--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,53 +1,28 @@
 <header>
   <nav class="navbar navbar-expand-md navbar-dark bg-success">
     <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+      aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
-        
-        
       </div>
-        <% if (user) { %>
-            <p style="margin-left: 50%; margin-right: 10px; margin-top: 10px;">Logged in as: <%= user.email %>! </p>
-            <form method="POST" action="/logout">
-              <button class="btn btn-danger">Logout</button>
-            </form>
-          <% } else { %>
-            <p style="margin-left: 50%; margin-right: 10px; margin-top: 10px;"><a class="nav-item nav-link" href="/register">Registration</a></p>
-            <p style="margin-top: 10px;"><a class="nav-item nav-link" href="/login">Login</a></p>
-            <% } %>
-          </div>
+
+      <% if (user) { %>
+        <p style="margin-left: 50%; margin-right: 10px; margin-top: 10px;">Logged in as: <%= user.email %>! </p>
+        <form method="POST" action="/logout">
+          <button class="btn btn-danger">Logout</button>
+        </form>
+      <% } else { %>
+          <p style="margin-left: 50%; margin-right: 10px; margin-top: 10px;"><a class="nav-item nav-link"
+              href="/register">Registration</a></p>
+          <p style="margin-top: 10px;"><a class="nav-item nav-link" href="/login">Login</a></p>
+      <% } %>
 
     </div>
 
-      
-<!-- REMOVE LOGIN FORM FROM HEADER -->
-      <!-- <% if(user) { %>
-        <p>Logged in as: <%= user.email %>! </p>
-        
-
-      <form method="POST" action="/logout">
-        <button>Logout</button>
-      </form>
-
-      <% } else{ %> 
-
-      <div>
-      <form method="POST" action="/login">
-        <input type='text' name='email' placeholder='Email' style="margin: 1em"/>
-        <input type='text' name='password' placeholder='Password' style="margin: 1em"/>
-        <button>Submit</button>
-      </form>
-      </div>
-        <% } %> -->
-<!-- ---------------------------------- -->
-
-
-
-    </div>
   </nav>
 </header>
